; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_diag.c_do_connect.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_diag.c_do_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMAL_SUCCESS = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"failed to initialize mmal vc library (%i:%s)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @do_connect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_connect() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @mmal_vc_init()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* @MMAL_SUCCESS, align 4
  %4 = icmp ne i32 %2, %3
  br i1 %4, label %5, label %12

5:                                                ; preds = %0
  %6 = load i32, i32* @stderr, align 4
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = call i8* @mmal_status_to_string(i32 %8)
  %10 = call i32 @fprintf(i32 %6, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %7, i8* %9)
  %11 = call i32 @exit(i32 1) #3
  unreachable

12:                                               ; preds = %0
  ret void
}

declare dso_local i32 @mmal_vc_init(...) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i8*) #1

declare dso_local i8* @mmal_status_to_string(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
